--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "graham-campbell/exceptions": "14.1",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.12",
-        "laravel/tinker": "^2.5"
+        "laravel/tinker": "^2.5",
+        "nwidart/laravel-modules": "^8.2"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.6",
@@ -38,6 +39,7 @@
     "autoload": {
         "psr-4": {
             "App\\": "app/",
+            "Modules\\": "Modules/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
         }
