--- a/.env.example
+++ b/.env.example
@@ -51,6 +51,8 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
+#filesystem
+FILESYSTEM_DRIVER=public
 
 APP_TIMEZONE=Asia/Shanghai
 APP_LOCALE=zh-CN
