--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "js-cookie": "2.2.0",
         "jsonlint": "1.6.3",
         "jszip": "3.2.1",
+        "moment": "^2.29.1",
         "node-sass": "^4.14.1",
         "normalize.css": "7.0.0",
         "nprogress": "0.2.0",
