--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         ]
     },
     "dependencies": {
+        "@toast-ui/editor": "^2.2.0",
         "axios": "0.18.1",
         "clipboard": "2.0.4",
         "codemirror": "5.45.0",
@@ -50,6 +51,7 @@
         "vue-count-to": "1.0.13",
         "vue-i18n": "^7.3.2",
         "vue-image-crop-upload": "^2.5.0",
+        "vue-markdown": "^2.2.4",
         "vue-router": "3.0.2",
         "vue-splitpane": "1.0.4",
         "vuedraggable": "2.20.0",
