--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "element-ui": "2.13.2",
         "file-saver": "2.0.1",
         "fuse.js": "3.4.4",
+        "github-markdown-css": "^4.0.0",
         "js-cookie": "2.2.0",
         "jsonlint": "1.6.3",
         "jszip": "3.2.1",
