--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,12 @@
 /node_modules
 /public/hot
 /public/storage
+/public/fonts
+/public/images
+/public/js
+/public/css
+/public/vue-admin-beautiful
+/public/vue-element-admin
 /storage/*.key
 /vendor
 .env
@@ -11,5 +17,4 @@ Homestead.yaml
 npm-debug.log
 yarn-error.log
 .idea
-public
 dist
