--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
         "css-loader": "^3.6.0",
         "driver.js": "0.9.5",
         "dropzone": "5.5.1",
+        "e-icon-picker": "^1.1.1",
         "echarts": "4.2.1",
         "element-ui": "2.13.2",
         "file-saver": "2.0.1",
+        "font-awesome": "^4.7.0",
         "fuse.js": "3.4.4",
         "github-markdown-css": "^4.0.0",
         "js-cookie": "2.2.0",
