--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -2,5 +2,5 @@
     "/js/main.js": "/js/main.js",
     "/css/app.css": "/css/app.css",
     "/js/manifest.js": "/js/manifest.js",
-    "/js//js/vendor.377e3f.js": "/js//js/vendor.377e3f.js"
+    "/js/vendor.js": "/js/vendor.js"
 }
